Adding instructions